syntax = "proto3";

option csharp_namespace = "PlantSimulatorService.Simulations.Protos";

package simulation_client;

import "Simulations/Protos/simulation_configuration.proto";

service SimulationClientService {
	rpc TransmitState (SimulationState) returns (SimulationStateResponse);
	rpc SayHello (ServerHelloRequest) returns (ServerHelloResponse);
	rpc SayGoodBye (ServerGoodByeRequest) returns (ServerGoodByeResponse);
}

message ServerHelloRequest {
	string ip = 1;
}

message ServerHelloResponse {
	string id = 1;
}

message ServerGoodByeResponse {

}

message ServerGoodByeRequest {
	string id = 1;
}

message SimulationState {
	string id = 1;
	uint64 simulation_time = 2;
	PlantModelState plant = 3;
}

message PlantModelState {
	repeated PlantNodeModelState shoot_system = 1;
	repeated PlantNodeModelState root_system = 2;
}

message PlantNodeModelState {
	repeated .simulation_configuration.Coordinate coordinates = 1;
	float thickness = 2;
	repeated PlantNodeModelState connections = 3;
	string description = 4;
}

message SimulationStateResponse {	
}

