syntax = "proto3";

option csharp_namespace = "PlantSimulatorService.Simulations.Protos";

package simulation_service;

import "Simulations/Protos/simulation_configuration.proto";

service SimulationServerService {
	rpc StartSimulation (.simulation_configuration.SimulationConfiguration) returns (.simulation_service.StartSimulationResponse);
	rpc StopSimulation (.simulation_service.StopSimulationRequest) returns (.simulation_service.StopSimulationResponse);
}

message StopSimulationRequest {
}

message StopSimulationResponse {
}

message StartSimulationResponse {
}